# solarpy

./: .readthedocs.yml  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
docs/source/: conf.py  documentation.rst  index.md
src/solarpy/: __init__.py  example.py
src/solarpy/instrument/: __init__.py  shadowband.py
src/solarpy/iotools/: __init__.py  read_t16.py  write_t16.py
src/solarpy/plotting/: __init__.py  colors.py  intraday_heatmap.py  map.py  multiplot.py  plot_scatter.py  shading_heatmap.py  style.py
src/solarpy/processing/: __init__.py  resample.py
src/solarpy/quality/: __init__.py  comparison.py  limits.py
src/sunlib/: __init__.py  plotting.py
tests/: test_example.py  test_instrument.py
tests/data/: LYN_2023_short.csv
tests/horizon/: test_horizon_mines.py
tests/iotools/: test_read_t16.py  test_write_t16.py
tests/processing/: test_resample.py
tests/quality/: test_comparison.py  test_limits.py
